--- a/co/edu/unbosque/view/templates/veterinario.html
+++ b/co/edu/unbosque/view/templates/veterinario.html
@@ -215,29 +215,40 @@
 checkServicios()
 function checkServicios(){
     var suma=0;
+    var cantidad=0;
     if(document.getElementById("n1").checked){
+     cantidad=cantidad+1;
      suma=15000+suma;
     }if(document.getElementById("n2").checked){
      suma=20000+suma;
+     cantidad=cantidad+1;
     }if(document.getElementById("n3").checked){
      suma=18000+suma;
+     cantidad=cantidad+1;
     }if(document.getElementById("n4").checked){
      suma=10000+suma;
+     cantidad=cantidad+1;
     }if(document.getElementById("n5").checked){
      suma=18000+suma;
+     cantidad=cantidad+1;
     }if(document.getElementById("n6").checked){
      suma=25000+suma;
+     cantidad=cantidad+1;
     }if(document.getElementById("n7").checked){
      suma=12000+suma;
+     cantidad=cantidad+1;
     }if(document.getElementById("n8").checked){
      suma=9000+suma;
+     cantidad=cantidad+1;
     }if(document.getElementById("n9").checked){
      suma=8000+suma;
+     cantidad=cantidad+1;
     }else if(suma==0){
     suma="Seleccione los servicios"
     }
     document.getElementById("TotalF").value=suma;
 }
+
 
 
 
