--- a/co/edu/unbosque/view/templates/inscripcion.html
+++ b/co/edu/unbosque/view/templates/inscripcion.html
@@ -44,11 +44,11 @@
             <label for="correo">Correo:</label><br>
             <input type="text" name="correo" id="correo" required><br>
             <label for="cedula">Cédula:</label><br>
-            <input type="number" name="cedula" id="cedula" maxlength="10" required><br>
+            <input type="number" name="cedula" id="cedula" max="9999999999" required><br>
             <label for="telefono">Teléfono:</label><br>
-            <input type="number" name="telefono" id="telefono" maxlength="10" required><br>
+            <input type="number" name="telefono" id="telefono" max="9999999999" required><br>
             <label for="direccion">Dirección:</label><br>
-            <input type="text" name="direccion" id="direccion" maxlength="30" required><br>
+            <input type="text" name="direccion" id="direccion" size="30" required><br>
             <br><br>
             <button id="submit" type="submit">Registrarse</button>
         </fieldset>
